最近评论暗色模式切换优化 暗色模式切换逻辑代码优化 控制台逻辑优化 右键菜单绑定事件优化

--- a/layout/includes/sidebar.pug
+++ b/layout/includes/sidebar.pug
@@ -21,7 +21,7 @@
     if theme.sidebar && theme.sidebar.display_mode
       span.sidebar-menu-item-title=_p("aside.function")
       .sidebar-menu-item
-        a.darkmode_switchbutton.menu-child(href='javascript:anzhiyu.switchDarkMode();' title=_p("aside.display_mode"))
+        a.darkmode_switchbutton.menu-child(href='javascript:void(0);' title=_p("aside.display_mode"))
           i.anzhiyufont.anzhiyu-icon-circle-half-stroke
           span=_p("aside.display_mode")
     if theme.sidebar && theme.sidebar.nav_menu_project
