调整 dom结构，pjax不再刷新footer

--- a/source/css/_layout/head.styl
+++ b/source/css/_layout/head.styl
@@ -442,9 +442,10 @@
     display: none
     padding: 2px 0 0 6px
     vertical-align: top
+    border-radius: 50px;
 
     &:hover
-      color: var(--white)
+      color: var(--white) !important
   #blog_name,
   .mask-name-container,
   #menus,
