fix: 移动端小屏幕下还是有溢出的现象，修改成min-height进行

--- a/source/css/_page/homepage.styl
+++ b/source/css/_page/homepage.styl
@@ -136,7 +136,7 @@
 
       +maxWidth768()
         width: 100%
-        height: 140px;
+        min-height: 140px;
       &.no-cover
         width: 100%
 
