--- a/source/css/_layout/aside.styl
+++ b/source/css/_layout/aside.styl
@@ -3,6 +3,8 @@
     #aside-content
       background: var(--anzhiyu-background);
       border: none;
+      z-index 2
+      margin-top: -1px
 #aside-content
   width: 300px
   animation: slide-in 0.6s 0.3s backwards;
@@ -16,9 +18,9 @@
   +maxWidth1200()
     width: 100%
     padding: 20px;
-
+  
   +maxWidth768()
-    margin-top: -1px;
+    padding: 0 20px 20px
 
   > .card-widget:first-child
     margin-top: 0
