侧栏最近文章超出修复

--- a/source/css/_layout/sidebar.styl
+++ b/source/css/_layout/sidebar.styl
@@ -247,8 +247,7 @@ li.card-category-list-item {
   padding: 2px 0;
   width: 100%;
   height: 100%;
-  display: flex;
-  align-items: center;
+  display: -webkit-box;
 }
 #aside-content .aside-list > .aside-list-item {
   padding: 8px;
