--- a/source/css/_global/function.styl
+++ b/source/css/_global/function.styl
@@ -337,3 +337,16 @@ if hexo-config('avatar.effect') == true
     transform: scale(1.1);
   100%
     transform: scale(.97);
+
+@keyframes header
+  from {
+   --anzhiyu-header-height: 544px
+  }
+  to {
+    --anzhiyu-header-height: 320px
+  }
+
+@property --anzhiyu-header-height
+  syntax: "<length-percentage>";
+  inherits: true;
+  initial-value: 544px;
