--- a/source/css/_layout/head.styl
+++ b/source/css/_layout/head.styl
@@ -99,8 +99,9 @@
     transition: 0.6s
     background-color: transparent
     overflow: hidden
-    animation: header 1s linear forwards;
-    animation-timeline: view();
+    if hexo-config('dynamicEffect') && hexo-config('dynamicEffect.postTopRollZoomInfo')
+      animation: header 1s linear forwards;
+      animation-timeline: view();
     if hexo-config('mainTone.enable')
       background-color: var(--anzhiyu-bar-background)
 
@@ -648,62 +649,63 @@
     transform: translate3d(85px, 0, 0)
 
 //波浪css
-.main-hero-waves-area
-  width: 100%
-  position: absolute
-  left: 0
-  bottom: -11px
-  z-index: 5
-  pointer-events: none
+if hexo-config('dynamicEffect') && hexo-config('dynamicEffect.postTopWave')
+  .main-hero-waves-area
+    width: 100%
+    position: absolute
+    left: 0
+    bottom: -11px
+    z-index: 5
+    pointer-events: none
 
-.waves-area .waves-svg
-  width: 100%
-  height: 5rem
+  .waves-area .waves-svg
+    width: 100%
+    height: 5rem
 
-//Animation
-.parallax > use
-  animation: move-forever 25s cubic-bezier(0.55, 0.5, 0.45, 0.5) infinite
+  //Animation
+  .parallax > use
+    animation: move-forever 25s cubic-bezier(0.55, 0.5, 0.45, 0.5) infinite
 
-.parallax > use:nth-child(1)
-  animation-delay: -2s
-  animation-duration: 7s
-  fill: #f7f9febd
+  .parallax > use:nth-child(1)
+    animation-delay: -2s
+    animation-duration: 7s
+    fill: #f7f9febd
 
-.parallax > use:nth-child(2)
-  animation-delay: -3s
-  animation-duration: 10s
-  fill: #f7f9fe82
+  .parallax > use:nth-child(2)
+    animation-delay: -3s
+    animation-duration: 10s
+    fill: #f7f9fe82
 
-.parallax > use:nth-child(3)
-  animation-delay: -4s
-  animation-duration: 13s
-  fill: #f7f9fe36
+  .parallax > use:nth-child(3)
+    animation-delay: -4s
+    animation-duration: 13s
+    fill: #f7f9fe36
 
-.parallax > use:nth-child(4)
-  animation-delay: -5s
-  animation-duration: 20s
-  fill: #f7f9fe
+  .parallax > use:nth-child(4)
+    animation-delay: -5s
+    animation-duration: 20s
+    fill: #f7f9fe
 
-//黑色模式背景
-[data-theme="dark"] .parallax > use:nth-child(1)
-  animation-delay: -2s
-  animation-duration: 7s
-  fill: #18171dc8
+  //黑色模式背景
+  [data-theme="dark"] .parallax > use:nth-child(1)
+    animation-delay: -2s
+    animation-duration: 7s
+    fill: #18171dc8
 
-[data-theme="dark"] .parallax > use:nth-child(2)
-  animation-delay: -3s
-  animation-duration: 10s
-  fill: #18171d80
+  [data-theme="dark"] .parallax > use:nth-child(2)
+    animation-delay: -3s
+    animation-duration: 10s
+    fill: #18171d80
 
-[data-theme="dark"] .parallax > use:nth-child(3)
-  animation-delay: -4s
-  animation-duration: 13s
-  fill: #18171d3e
+  [data-theme="dark"] .parallax > use:nth-child(3)
+    animation-delay: -4s
+    animation-duration: 13s
+    fill: #18171d3e
 
-[data-theme="dark"] .parallax > use:nth-child(4)
-  animation-delay: -5s
-  animation-duration: 20s
-  fill: rgb(0 0 0 / 39%)
+  [data-theme="dark"] .parallax > use:nth-child(4)
+    animation-delay: -5s
+    animation-duration: 20s
+    fill: rgb(0 0 0 / 39%)
 #post-firstinfo
   text-align: left;
   display: flex;
