优化post顶部的动画

--- a/source/css/_global/function.styl
+++ b/source/css/_global/function.styl
@@ -341,22 +341,26 @@ if hexo-config('avatar.effect') == true
 if hexo-config('dynamicEffect') && hexo-config('dynamicEffect.postTopRollZoomInfo')
   @keyframes header
     entry 0% {
-      --anzhiyu-header-height: 320px
-      --anzhiyu-header-info-scale: 0.6
+      --anzhiyu-header-margin: 50px
+      --anzhiyu-header-info-scale: 0.7
+      --anzhiyu-header-cover-scale: 1
     }
 
     entry 100% {
-      --anzhiyu-header-height: 544px
+      --anzhiyu-header-margin: 0px
       --anzhiyu-header-info-scale: 1
+       --anzhiyu-header-cover-scale: 2
     }
     exit 100% {
-      --anzhiyu-header-height: 320px
-      --anzhiyu-header-info-scale: 0.6
+      --anzhiyu-header-margin: 50px
+      --anzhiyu-header-info-scale: 0.7
+       --anzhiyu-header-cover-scale: 1
     }
 
     exit 0% {
-      --anzhiyu-header-height: 544px
+      --anzhiyu-header-margin: 0px
       --anzhiyu-header-info-scale: 1
+       --anzhiyu-header-cover-scale: 2
     }
 
   @keyframes post-info-slide-in
@@ -367,15 +371,21 @@ if hexo-config('dynamicEffect') && hexo-config('dynamicEffect.postTopRollZoomInf
       transform: scale(var(--anzhiyu-header-info-scale)) translateY(0);
       opacity: 1;
 
-  @property --anzhiyu-header-height
+  @property --anzhiyu-header-margin
     syntax: "<length-percentage>";
     inherits: true;
-    initial-value: 544px;
+    initial-value: 0px;
 
   @property --anzhiyu-header-info-scale
     syntax: "<number>";
     inherits: true;
     initial-value: 1;
+
+  @property  --anzhiyu-header-cover-scale
+    syntax: "<number>";
+    inherits: true;
+    initial-value: 2;
+
 @keyframes slide-in
   0%
     transform: translateY(20px);
