--- a/source/css/_global/function.styl
+++ b/source/css/_global/function.styl
@@ -341,24 +341,24 @@ if hexo-config('avatar.effect') == true
 if hexo-config('dynamicEffect') && hexo-config('dynamicEffect.postTopRollZoomInfo')
   @keyframes header
     entry 0% {
-      --anzhiyu-header-margin: 50px
+      --anzhiyu-header-translateY: 160px
       --anzhiyu-header-info-scale: 0.7
       --anzhiyu-header-cover-scale: 1
     }
 
     entry 100% {
-      --anzhiyu-header-margin: 0px
+      --anzhiyu-header-translateY: 0px
       --anzhiyu-header-info-scale: 1
        --anzhiyu-header-cover-scale: 2
     }
     exit 100% {
-      --anzhiyu-header-margin: 50px
+      --anzhiyu-header-translateY: 160px
       --anzhiyu-header-info-scale: 0.7
        --anzhiyu-header-cover-scale: 1
     }
 
     exit 0% {
-      --anzhiyu-header-margin: 0px
+      --anzhiyu-header-translateY: 0px
       --anzhiyu-header-info-scale: 1
        --anzhiyu-header-cover-scale: 2
     }
@@ -371,7 +371,7 @@ if hexo-config('dynamicEffect') && hexo-config('dynamicEffect.postTopRollZoomInf
       transform: scale(var(--anzhiyu-header-info-scale)) translateY(0);
       opacity: 1;
 
-  @property --anzhiyu-header-margin
+  @property --anzhiyu-header-translateY
     syntax: "<length-percentage>";
     inherits: true;
     initial-value: 0px;
