优化自动深色模式

--- a/source/css/_global/function.styl
+++ b/source/css/_global/function.styl
@@ -92,6 +92,12 @@ if hexo-config('icons.fontawesome')
       cursor: pointer
       transition: all .3s ease-out
 
+schemeDark()
+  @media (prefers-color-scheme: dark)
+    {block}
+schemeLight()
+  @media (prefers-color-scheme: light)
+    {block}
 maxWidth500()
   @media screen and (max-width: 500px)
     {block}
