--- a/source/css/_layout/head.styl
+++ b/source/css/_layout/head.styl
@@ -691,25 +691,16 @@ if hexo-config('dynamicEffect') && hexo-config('dynamicEffect.postTopWave')
     fill: #f7f9fe
 
   //黑色模式背景
-  [data-theme="dark"] .parallax > use:nth-child(1)
-    animation-delay: -2s
-    animation-duration: 7s
-    fill: #18171dc8
+  [data-theme="dark"] .parallax 
+    & > use:nth-child(1)
+      fill: #18171dc8
+    & > use:nth-child(2)
+      fill: #18171d80
+    & > use:nth-child(3)
+      fill: #18171d3e
+    & > use:nth-child(4)
+      fill: rgb(0 0 0 / 39%)
 
-  [data-theme="dark"] .parallax > use:nth-child(2)
-    animation-delay: -3s
-    animation-duration: 10s
-    fill: #18171d80
-
-  [data-theme="dark"] .parallax > use:nth-child(3)
-    animation-delay: -4s
-    animation-duration: 13s
-    fill: #18171d3e
-
-  [data-theme="dark"] .parallax > use:nth-child(4)
-    animation-delay: -5s
-    animation-duration: 20s
-    fill: rgb(0 0 0 / 39%)
 #post-firstinfo
   text-align: left;
   display: flex;
