修复代码块图标超出导致的异常滚动

--- a/source/css/_global/index.styl
+++ b/source/css/_global/index.styl
@@ -111,7 +111,7 @@
   --anzhiyu-card-btn-bg: #edf0f7;
   --anzhiyu-post-blockquote-bg: #fafcff;
   --anzhiyu-post-tabs-bg: #f2f5f8;
-  --anzhiyu-secondbg: #f1f3f8;
+  --anzhiyu-secondbg: #f7f7f9;
   --anzhiyu-shadow-nav: 0 5px 12px -5px rgba(102, 68, 68, 0.05);
   --anzhiyu-card-bg: #fff;
   --anzhiyu-shadow-lightblack: 0 5px 12px -5px rgba(102, 68, 68, 0);
@@ -148,7 +148,7 @@
   --anzhiyu-card-btn-bg: #edf0f7;
   --anzhiyu-post-blockquote-bg: #fafcff;
   --anzhiyu-post-tabs-bg: #f2f5f8;
-  --anzhiyu-secondbg: #f1f3f8;
+  --anzhiyu-secondbg: #f7f7f9;
   --anzhiyu-shadow-nav: 0 5px 12px -5px rgba(102, 68, 68, 0.05);
   --anzhiyu-card-bg: #fff;
   --anzhiyu-shadow-lightblack: 0 5px 12px -5px rgba(102, 68, 68, 0);
@@ -186,7 +186,7 @@
   --anzhiyu-card-btn-bg: #30343f;
   --anzhiyu-post-blockquote-bg: #000;
   --anzhiyu-post-tabs-bg: #121212;
-  --anzhiyu-secondbg: #30343f;
+  --anzhiyu-secondbg: #21232a;
   --anzhiyu-shadow-nav: 0 5px 20px 0px rgba(28, 28, 28, 0.4);
   --anzhiyu-card-bg: #1d1e22;
   --anzhiyu-shadow-lightblack: 0 5px 12px -5px rgba(102, 68, 68, 0);
@@ -224,7 +224,7 @@
   --anzhiyu-card-btn-bg: #30343f;
   --anzhiyu-post-blockquote-bg: #000;
   --anzhiyu-post-tabs-bg: #121212;
-  --anzhiyu-secondbg: #30343f;
+  --anzhiyu-secondbg: #21232a;
   --anzhiyu-shadow-nav: 0 5px 20px 0px rgba(28, 28, 28, 0.4);
   --anzhiyu-card-bg: #1d1e22;
   --anzhiyu-shadow-lightblack: 0 5px 12px -5px rgba(102, 68, 68, 0);
