--- a/source/css/_page/about.styl
+++ b/source/css/_page/about.styl
@@ -897,7 +897,6 @@ body[data-type='about'] #web_bg {
 
 .author-content-item.careers {
   min-height: 400px;
-  background-color: #ffffff;
   background-size: contain;
   background-repeat: no-repeat;
   background-position-x: right;
@@ -913,18 +912,8 @@ body[data-type='about'] #web_bg {
 }
 
 .author-content-item.careers .career-item {
-  flex: 1;
   display: flex;
-  justify-content: space-between;
-}
-
-.author-content-item.careers .career-item .career-item-left {
-  display: flex;
-  align-items: center;
-}
-
-.author-content-item.careers .career-item .career-item-right {
-  display: flex;
+  justify-content: flex-start;
   align-items: center;
 }
 
