--- a/source/css/_page/common.styl
+++ b/source/css/_page/common.styl
@@ -5,6 +5,7 @@
   display: flex
   flex-direction: column
   min-height: 100vh
+  justify-content: space-between;
   +maxWidth768()
     .layout
       padding: 0;
