新增页面评论动画

--- a/source/css/_extra/console/console.css
+++ b/source/css/_extra/console/console.css
@@ -171,7 +171,8 @@
 }
 
 #console .aside-list-item:hover .thumbnail,
-#console .aside-list-item:hover .content .comment {
+#console .aside-list-item:hover .content .comment,
+#console .aside-list-item:hover .content time {
   color: var(--anzhiyu-white);
 }
 
