--- a/source/css/_third-party/twikoo.styl
+++ b/source/css/_third-party/twikoo.styl
@@ -319,6 +319,8 @@ if hexo-config('comments.use') == 'Twikoo'
     border: var(--style-border);
     border-top: var(--style-border);
     box-shadow: var(--anzhiyu-shadow-border);
+    animation: animate-in-and-out 1s linear forwards;
+    animation-timeline: view();
   }
 
   .tk-content {
