优化搜索窄屏幕显示

--- a/source/css/_extra/console/console.css
+++ b/source/css/_extra/console/console.css
@@ -261,6 +261,8 @@
   box-shadow: none;
   border: none;
   overflow: hidden;
+  min-width: 575px;
+  min-height: 169px;
 }
 
 #console .console-card.history .item-headline {
