--- a/source/css/_global/function.styl
+++ b/source/css/_global/function.styl
@@ -140,10 +140,15 @@ minWidth1200()
 minWidth2000()
   @media screen and (min-width: 2000px)
     {block}
+maxHeight680()
+  @media screen and (max-height: 680px)
+    {block}
+maxHeight580()
+  @media screen and (max-height: 580px)
+    {block}
 
 .scroll-down-effects
   animation: scroll-down-effect 1.5s infinite
-
 .anzhiyu-spin
   display: inline-block
   transform-origin: 50% 50%;
