--- a/source/css/_extra/console/console.css
+++ b/source/css/_extra/console/console.css
@@ -60,6 +60,7 @@
   height: 100%;
   width: 60%;
   overflow: hidden;
+  min-width: 575px;
 }
 
 #console .console-card {
@@ -262,7 +263,6 @@
   border: none;
   overflow: hidden;
   min-width: 575px;
-  min-height: 169px;
 }
 
 #console .console-card.history .item-headline {
@@ -272,17 +272,16 @@
 #console .console-card.history .card-archive-list {
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
   flex-wrap: wrap;
 }
 
 #console .console-card.history .card-archive-list li.card-archive-list-item {
-  flex: 0 0 24%;
+  flex: 0 0 25%;
 }
 
 #console .console-card.history .card-archive-list .card-archive-list-link {
   border-radius: 8px;
-  margin: 4px 0;
+  margin: 4px;
   display: flex;
   flex-direction: column;
   align-content: space-between;
@@ -298,6 +297,7 @@
 
 #console #card-newest-comments {
   height: 100%;
+  min-height: 580px;
 }
 
 #console .button-group i {
@@ -315,7 +315,7 @@
   list-style: none;
 }
 #console .console-card.history ul.card-archive-list {
-  margin: 2px;
+  margin: -4px;
 }
 
 [data-theme="dark"] #console .button-group .console-btn-item a.darkmode_switchbutton {
