--- a/source/css/_extra/home_top/top_group_banner.css
+++ b/source/css/_extra/home_top/top_group_banner.css
@@ -239,7 +239,7 @@
     display: flex !important;
   }
   #bbTimeList {
-    margin: 15px 15px 0;
+    margin: 0 1.5rem;
     max-width: 100%;
     width: auto;
   }
