--- a/source/css/_page/homepage.styl
+++ b/source/css/_page/homepage.styl
@@ -315,7 +315,7 @@ if hexo-config('article_double_row') == true
     #content-inner #recent-posts > .recent-post-item > .recent-post-info > .content
       opacity: 0;
       height: 0;
-  +minWidth1200()
+  @media screen and (min-width: 1201px)
     #recent-posts
       align-content: flex-start
       display: flex
