更加和谐的 pdding

--- a/source/css/_page/common.styl
+++ b/source/css/_page/common.styl
@@ -22,13 +22,14 @@
   display: flex
   flex: 1 auto
   margin: 0 auto
-  padding: 1.875rem 1.5rem
+  padding: 1.25rem 1.5rem
   max-width: 1200px
   width: 100%
   justify-content: center;
 
   +maxWidth1200()
     flex-direction: column
+    padding-top: 10px
 
   +maxWidth768()
     padding: 20px 15px;
