修复轮播图首次加载空白问题

--- a/layout/includes/top/top.pug
+++ b/layout/includes/top/top.pug
@@ -124,6 +124,10 @@ if home_top_config.enable
         },
       });
 
+      window.addEventListener("load", function () {
+        swiper.update();
+      });
+
       var comtainer = document.getElementById("swiper_container");
       if (comtainer !== null) {
         comtainer.onmouseenter = function () {
