优化归档页面以及高度不够情况下的百分比显示

--- a/source/css/_page/common.styl
+++ b/source/css/_page/common.styl
@@ -17,6 +17,8 @@
         background: transparent;
     #archive
       background: var(--anzhiyu-background)
+      border: none
+      padding-top: 0px
   
 .layout
   display: flex
