修复相册集移动端表现 修复更新日志移动端表现

--- a/source/css/_global/index.styl
+++ b/source/css/_global/index.styl
@@ -451,3 +451,6 @@ blockquote
   max-width: 1400px
   width 100%
   margin 0 auto
+  & + #content-inner
+    +maxWidth768()
+      padding:1.875rem 0rem 0
