--- a/source/css/_global/function.styl
+++ b/source/css/_global/function.styl
@@ -413,3 +413,11 @@ if hexo-config('dynamicEffect') && hexo-config('dynamicEffect.postTopRollZoomInf
   100%
     transform: translateY(0);
     opacity: 1;
+
+@keyframes floating
+  0%
+    transform: translate(0,-4px);
+  50%
+    transform: translate(0,4px);
+  100%
+    transform: translate(0,-4px);
