--- a/source/css/_layout/pagination.styl
+++ b/source/css/_layout/pagination.styl
@@ -130,7 +130,7 @@
             padding-bottom: 0.5rem;
           .next_info,
           .prev_info
-            color: var(--heo-fontcolor);
+            color: var(--anzhiyu-fontcolor);
             -webkit-line-clamp: 2;
             white-space: normal;
             line-height: 1.3;
