--- a/source/css/_page/about.styl
+++ b/source/css/_page/about.styl
@@ -21,35 +21,76 @@ body[data-type='about'] #web_bg {
   background: var(--anzhiyu-background);
 }
 
-#about-page .author-box {
-  position: relative;
-}
+#about-page
+  padding-top: 1rem;
+  .author-box
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: 0 0 16px 0;
+    .author-tag-left
+      display: flex;
+      flex-direction: column;
+      align-items: flex-end;
+      .author-tag:first-child, 
+      .author-tag:last-child
+        margin-right: -16px
+    .author-tag-right
+      display: flex;
+      flex-direction: column;
+      align-items: flex-start;
+      .author-tag:first-child, 
+      .author-tag:last-child
+        margin-left: -16px
+    .author-tag
+      transform: translate(0,-4px);
+      padding: 1px 8px;
+      background: var(--anzhiyu-card-bg);
+      border: var(--style-border-always);
+      border-radius: 40px;
+      margin-top: 6px;
+      font-size: 14px;
+      font-weight: 700;
+      box-shadow: var(--anzhiyu-shadow-lightblack);
+      animation: 6s ease-in-out 0s infinite normal none running floating;
+      &:nth-child(1)
+        animation-delay: 0s;
+      &:nth-child(2)
+        animation-delay: .6s;
+      &:nth-child(3)
+        animation-delay: 1.2s;
+      &:nth-child(4)
+        animation-delay: 1.8s;
 
-#about-page .author-box .author-img {
-  margin: auto;
-  border-radius: 50%;
-  overflow: hidden;
-  width: 180px;
-  height: 180px;
-}
+    .author-img
+      margin: 0 30px;
+      border-radius: 50%;
+      width: 180px;
+      height: 180px;
+      position: relative;
+      background: var(--anzhiyu-secondbg);
+      user-select: none;
+      transition: .3s;
+      &:hover
+        transform: scale(1.1);
+      &:before
+        content: '';
+        transition: 1s;
+        width: 30px;
+        height: 30px;
+        background: var(--anzhiyu-green);
+        position: absolute;
+        border-radius: 50%;
+        border: 5px solid var(--anzhiyu-background);
+        bottom: 5px;
+        right: 10px;
+        z-index: 2;
 
 #about-page .author-box .author-img img {
   border-radius: 50%;
   overflow: hidden;
   width: 180px;
   height: 180px;
-}
-
-#about-page .author-box .image-dot {
-  width: 45px;
-  height: 45px;
-  background: #6bdf8f;
-  position: absolute;
-  border-radius: 50%;
-  border: 6px solid var(--anzhiyu-background);
-  top: 50%;
-  left: 50%;
-  transform: translate(35px, 45px);
 }
 
 .author-content {
