支持anheyu CDN pace样式升级

--- a/source/css/_global/index.styl
+++ b/source/css/_global/index.styl
@@ -70,7 +70,7 @@
   --anzhiyu-shadow-green: 0 8px 12px -3px #87ee7936;
   --anzhiyu-shadow-border: 0 8px 16px -4px #2c2d300c;
   --anzhiyu-shadow-blackdeep: 0 2px 16px -3px rgba(0, 0, 0, 0.15);
-  --anzhiyu-logo-color: linear-gradient(215deg, #4584ff 30%, #ff7676 70%);
+  --anzhiyu-logo-color: linear-gradient(215deg, #4584ff 0%, #cf0db9 100%);
   --anzhiyu-code-stress: var(--anzhiyu-main);
   --style-border: 1px solid var(--anzhiyu-card-border);
   --anzhiyu-blue-main: #3b70fc;
